Fix Java-21 methods being used in a Java-17 project.